@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -14,7 +14,6 @@
 
 package com.liferay.portal.upload;
 
-import com.liferay.portal.kernel.exception.SystemException;
 import com.liferay.portal.kernel.io.ByteArrayFileInputStream;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
@@ -23,11 +22,13 @@ import com.liferay.portal.kernel.upload.UploadException;
 import com.liferay.portal.kernel.upload.UploadServletRequest;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.FileUtil;
+import com.liferay.portal.kernel.util.ProgressTracker;
 import com.liferay.portal.kernel.util.PropsKeys;
+import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.SystemProperties;
 import com.liferay.portal.kernel.util.Validator;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.util.PrefsPropsUtil;
-import com.liferay.portal.util.WebKeys;
 
 import java.io.File;
 import java.io.IOException;
@@ -42,10 +43,12 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
 
 import javax.servlet.ServletInputStream;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletRequestWrapper;
+import javax.servlet.http.HttpSession;
 
 import org.apache.commons.fileupload.FileUploadBase;
 import org.apache.commons.fileupload.servlet.ServletFileUpload;
@@ -59,7 +62,7 @@ import org.apache.commons.fileupload.servlet.ServletFileUpload;
 public class UploadServletRequestImpl
 	extends HttpServletRequestWrapper implements UploadServletRequest {
 
-	public static File getTempDir() throws SystemException {
+	public static File getTempDir() {
 		if (_tempDir == null) {
 			_tempDir = new File(
 				PrefsPropsUtil.getString(
@@ -77,23 +80,69 @@ public class UploadServletRequestImpl
 	public UploadServletRequestImpl(HttpServletRequest request) {
 		super(request);
 
-		_fileParameters = new LinkedHashMap<String, FileItem[]>();
-		_regularParameters = new LinkedHashMap<String, List<String>>();
+		_fileParameters = new LinkedHashMap<>();
+		_regularParameters = new LinkedHashMap<>();
+
+		LiferayServletRequest liferayServletRequest = null;
 
 		try {
-			ServletFileUpload servletFileUpload = new LiferayFileUpload(
-				new LiferayFileItemFactory(getTempDir()), request);
+			HttpSession session = request.getSession();
 
-			servletFileUpload.setSizeMax(
-				PrefsPropsUtil.getLong(
-					PropsKeys.UPLOAD_SERVLET_REQUEST_IMPL_MAX_SIZE));
+			session.removeAttribute(ProgressTracker.PERCENT);
 
-			_liferayServletRequest = new LiferayServletRequest(request);
+			ServletFileUpload servletFileUpload = new ServletFileUpload(
+				new LiferayFileItemFactory(getTempDir()));
 
-			List<LiferayFileItem> liferayFileItemsList =
-				servletFileUpload.parseRequest(_liferayServletRequest);
+			liferayServletRequest = new LiferayServletRequest(request);
 
-			for (LiferayFileItem liferayFileItem : liferayFileItemsList) {
+			List<org.apache.commons.fileupload.FileItem> fileItems =
+				servletFileUpload.parseRequest(liferayServletRequest);
+
+			liferayServletRequest.setFinishedReadingOriginalStream(true);
+
+			long uploadServletRequestImplMaxSize = PrefsPropsUtil.getLong(
+				PropsKeys.UPLOAD_SERVLET_REQUEST_IMPL_MAX_SIZE);
+			long uploadServletRequestImplSize = 0;
+
+			int contentLength = request.getContentLength();
+
+			if ((uploadServletRequestImplMaxSize > 0) &&
+				((contentLength == -1) ||
+				 (contentLength > uploadServletRequestImplMaxSize))) {
+
+				fileItems = sort(fileItems);
+			}
+
+			for (org.apache.commons.fileupload.FileItem fileItem : fileItems) {
+				LiferayFileItem liferayFileItem = (LiferayFileItem)fileItem;
+
+				if (uploadServletRequestImplMaxSize > 0) {
+					long itemSize = liferayFileItem.getItemSize();
+
+					if ((uploadServletRequestImplSize + itemSize) >
+							uploadServletRequestImplMaxSize) {
+
+						StringBundler sb = new StringBundler(3);
+
+						sb.append(
+							"Request reached the maximum permitted size of ");
+						sb.append(uploadServletRequestImplMaxSize);
+						sb.append(" bytes");
+
+						UploadException uploadException = new UploadException(
+							sb.toString());
+
+						uploadException.setExceededUploadRequestSizeLimit(true);
+
+						request.setAttribute(
+							WebKeys.UPLOAD_EXCEPTION, uploadException);
+
+						continue;
+					}
+
+					uploadServletRequestImplSize += itemSize;
+				}
+
 				if (liferayFileItem.isFormField()) {
 					liferayFileItem.setString(request.getCharacterEncoding());
 
@@ -106,7 +155,28 @@ public class UploadServletRequestImpl
 
 					List<String> values = _regularParameters.get(fieldName);
 
-					values.add(liferayFileItem.getString());
+					if (liferayFileItem.getSize() >
+							LiferayFileItem.THRESHOLD_SIZE) {
+
+						StringBundler sb = new StringBundler(5);
+
+						sb.append("The field ");
+						sb.append(fieldName);
+						sb.append(" exceeds its maximum permitted size of ");
+						sb.append(LiferayFileItem.THRESHOLD_SIZE);
+						sb.append(" bytes");
+
+						UploadException uploadException = new UploadException(
+							sb.toString());
+
+						uploadException.setExceededLiferayFileItemSizeLimit(
+							true);
+
+						request.setAttribute(
+							WebKeys.UPLOAD_EXCEPTION, uploadException);
+					}
+
+					values.add(liferayFileItem.getEncodedString());
 
 					continue;
 				}
@@ -138,10 +208,11 @@ public class UploadServletRequestImpl
 		catch (Exception e) {
 			UploadException uploadException = new UploadException(e);
 
-			if (e instanceof FileUploadBase.FileSizeLimitExceededException ||
-				e instanceof FileUploadBase.SizeLimitExceededException ) {
-
-				uploadException.setExceededSizeLimit(true);
+			if (e instanceof FileUploadBase.FileSizeLimitExceededException) {
+				uploadException.setExceededFileSizeLimit(true);
+			}
+			else if (e instanceof FileUploadBase.SizeLimitExceededException) {
+				uploadException.setExceededUploadRequestSizeLimit(true);
 			}
 
 			request.setAttribute(WebKeys.UPLOAD_EXCEPTION, uploadException);
@@ -150,24 +221,28 @@ public class UploadServletRequestImpl
 				_log.debug(e, e);
 			}
 		}
+
+		_liferayServletRequest = liferayServletRequest;
 	}
 
 	public UploadServletRequestImpl(
-		HttpServletRequest request, Map<String, FileItem[]> fileParams,
-		Map<String, List<String>> regularParams) {
+		HttpServletRequest request, Map<String, FileItem[]> fileParameters,
+		Map<String, List<String>> regularParameters) {
 
 		super(request);
 
-		_fileParameters = new LinkedHashMap<String, FileItem[]>();
-		_regularParameters = new LinkedHashMap<String, List<String>>();
+		_fileParameters = new LinkedHashMap<>();
+		_regularParameters = new LinkedHashMap<>();
 
-		if (fileParams != null) {
-			_fileParameters.putAll(fileParams);
+		if (fileParameters != null) {
+			_fileParameters.putAll(fileParameters);
 		}
 
-		if (regularParams != null) {
-			_regularParameters.putAll(regularParams);
+		if (regularParameters != null) {
+			_regularParameters.putAll(regularParameters);
 		}
+
+		_liferayServletRequest = null;
 	}
 
 	@Override
@@ -179,13 +254,17 @@ public class UploadServletRequestImpl
 				}
 			}
 		}
+
+		if (_liferayServletRequest != null) {
+			_liferayServletRequest.cleanUp();
+		}
 	}
 
 	@Override
 	public String getContentType(String name) {
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
 			return liferayFileItem.getContentType();
@@ -207,7 +286,7 @@ public class UploadServletRequestImpl
 
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems == null) || (liferayFileItems.length == 0)) {
+		if (ArrayUtil.isEmpty(liferayFileItems)) {
 			return null;
 		}
 
@@ -255,7 +334,7 @@ public class UploadServletRequestImpl
 
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
 			inputStream = getInputStream(liferayFileItem, deleteOnClose);
@@ -268,7 +347,7 @@ public class UploadServletRequestImpl
 	public String getFileName(String name) {
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
 			return liferayFileItem.getFileName();
@@ -281,7 +360,7 @@ public class UploadServletRequestImpl
 	public String[] getFileNames(String name) {
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			String[] fileNames = new String[liferayFileItems.length];
 
 			for (int i = 0; i < liferayFileItems.length; i++) {
@@ -306,7 +385,7 @@ public class UploadServletRequestImpl
 
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			File[] files = new File[liferayFileItems.length];
 
 			for (int i = 0; i < liferayFileItems.length; i++) {
@@ -342,7 +421,7 @@ public class UploadServletRequestImpl
 
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			inputStreams = new InputStream[liferayFileItems.length];
 
 			for (int i = 0; i < liferayFileItems.length; i++) {
@@ -362,7 +441,7 @@ public class UploadServletRequestImpl
 	public String getFullFileName(String name) {
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
 			return liferayFileItem.getFullFileName();
@@ -373,7 +452,11 @@ public class UploadServletRequestImpl
 
 	@Override
 	public ServletInputStream getInputStream() throws IOException {
-		return _liferayServletRequest.getInputStream();
+		if (_liferayServletRequest != null) {
+			return _liferayServletRequest.getInputStream();
+		}
+
+		return super.getInputStream();
 	}
 
 	@Override
@@ -394,14 +477,18 @@ public class UploadServletRequestImpl
 
 	@Override
 	public Map<String, String[]> getParameterMap() {
-		Map<String, String[]> map = new HashMap<String, String[]>();
+		Map<String, String[]> map = new HashMap<>();
 
 		Enumeration<String> enu = getParameterNames();
 
 		while (enu.hasMoreElements()) {
 			String name = enu.nextElement();
 
-			map.put(name, getParameterValues(name));
+			String[] values = getParameterValues(name);
+
+			if (values != null) {
+				map.put(name, values);
+			}
 		}
 
 		return map;
@@ -409,7 +496,7 @@ public class UploadServletRequestImpl
 
 	@Override
 	public Enumeration<String> getParameterNames() {
-		Set<String> parameterNames = new LinkedHashSet<String>();
+		Set<String> parameterNames = new LinkedHashSet<>();
 
 		Enumeration<String> enu = super.getParameterNames();
 
@@ -454,10 +541,10 @@ public class UploadServletRequestImpl
 	public Long getSize(String name) {
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
-			return new Long(liferayFileItem.getSize());
+			return Long.valueOf(liferayFileItem.getSize());
 		}
 
 		return null;
@@ -467,10 +554,10 @@ public class UploadServletRequestImpl
 	public Boolean isFormField(String name) {
 		FileItem[] liferayFileItems = _fileParameters.get(name);
 
-		if ((liferayFileItems != null) && (liferayFileItems.length > 0)) {
+		if (ArrayUtil.isNotEmpty(liferayFileItems)) {
 			FileItem liferayFileItem = liferayFileItems[0];
 
-			return new Boolean(liferayFileItem.isFormField());
+			return liferayFileItem.isFormField();
 		}
 
 		return null;
@@ -494,13 +581,97 @@ public class UploadServletRequestImpl
 		return inputStream;
 	}
 
-	private static Log _log = LogFactoryUtil.getLog(
+	protected List<org.apache.commons.fileupload.FileItem> sort(
+		List<org.apache.commons.fileupload.FileItem> fileItems) {
+
+		Map<String, GroupedFileItems> groupedFileItemsMap = new HashMap<>();
+
+		for (org.apache.commons.fileupload.FileItem fileItem : fileItems) {
+			String fieldName = fileItem.getFieldName();
+
+			GroupedFileItems groupedFileItems = groupedFileItemsMap.get(
+				fieldName);
+
+			if (groupedFileItems == null) {
+				groupedFileItems = new GroupedFileItems(fieldName);
+
+				groupedFileItemsMap.put(fieldName, groupedFileItems);
+			}
+
+			groupedFileItems.addFileItem(fileItem);
+		}
+
+		Set<GroupedFileItems> groupedFileItemsList = new TreeSet<>(
+			groupedFileItemsMap.values());
+
+		List<org.apache.commons.fileupload.FileItem> sortedFileItems =
+			new ArrayList<>();
+
+		for (GroupedFileItems groupedFileItems : groupedFileItemsList) {
+			sortedFileItems.addAll(groupedFileItems.getFileItems());
+		}
+
+		return sortedFileItems;
+	}
+
+	private static final Log _log = LogFactoryUtil.getLog(
 		UploadServletRequestImpl.class);
 
 	private static File _tempDir;
 
-	private Map<String, FileItem[]> _fileParameters;
-	private LiferayServletRequest _liferayServletRequest;
-	private Map<String, List<String>> _regularParameters;
+	private final Map<String, FileItem[]> _fileParameters;
+	private final LiferayServletRequest _liferayServletRequest;
+	private final Map<String, List<String>> _regularParameters;
+
+	private static class GroupedFileItems
+		implements Comparable<GroupedFileItems> {
+
+		public GroupedFileItems(String key) {
+			_key = key;
+		}
+
+		public void addFileItem(
+			org.apache.commons.fileupload.FileItem fileItem) {
+
+			_fileItems.add(fileItem);
+
+			_fileItemsSize += fileItem.getSize();
+		}
+
+		@Override
+		public int compareTo(GroupedFileItems groupedFileItems) {
+			if (groupedFileItems == null) {
+				return 1;
+			}
+
+			if (equals(groupedFileItems)) {
+				return 0;
+			}
+
+			if (_key.equals(groupedFileItems._key)) {
+				return 1;
+			}
+
+			if (getFileItemsSize() >= groupedFileItems.getFileItemsSize()) {
+				return 1;
+			}
+
+			return -1;
+		}
+
+		public List<org.apache.commons.fileupload.FileItem> getFileItems() {
+			return _fileItems;
+		}
+
+		public int getFileItemsSize() {
+			return _fileItemsSize;
+		}
+
+		private final List<org.apache.commons.fileupload.FileItem> _fileItems =
+			new ArrayList<>();
+		private int _fileItemsSize;
+		private final String _key;
+
+	}
 
 }
