@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -16,15 +16,20 @@ package com.liferay.portal.util;
 
 import com.liferay.portal.kernel.configuration.Filter;
 import com.liferay.portal.kernel.io.unsync.UnsyncByteArrayOutputStream;
+import com.liferay.portal.kernel.io.unsync.UnsyncFilterInputStream;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.memory.FinalizeAction;
+import com.liferay.portal.kernel.memory.FinalizeManager;
 import com.liferay.portal.kernel.security.pacl.DoPrivileged;
 import com.liferay.portal.kernel.servlet.HttpHeaders;
+import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.CharPool;
 import com.liferay.portal.kernel.util.ContentTypes;
 import com.liferay.portal.kernel.util.FileUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.Http;
+import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
@@ -34,6 +39,8 @@ import com.liferay.portal.kernel.util.Validator;
 
 import java.io.IOException;
 import java.io.InputStream;
+
+import java.lang.ref.Reference;
 
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
@@ -98,6 +105,7 @@ import org.apache.commons.httpclient.protocol.Protocol;
 /**
  * @author Brian Wing Shun Chan
  * @author Hugo Huijser
+ * @author Shuyang Zhou
  */
 @DoPrivileged
 public class HttpImpl implements Http {
@@ -128,6 +136,9 @@ public class HttpImpl implements Http {
 
 			_nonProxyHostsPattern = Pattern.compile(nonProxyHostsRegEx);
 		}
+		else {
+			_nonProxyHostsPattern = null;
+		}
 
 		MultiThreadedHttpConnectionManager httpConnectionManager =
 			new MultiThreadedHttpConnectionManager();
@@ -137,19 +148,21 @@ public class HttpImpl implements Http {
 
 		httpConnectionManagerParams.setConnectionTimeout(_TIMEOUT);
 		httpConnectionManagerParams.setDefaultMaxConnectionsPerHost(
-			new Integer(_MAX_CONNECTIONS_PER_HOST));
+			Integer.valueOf(_MAX_CONNECTIONS_PER_HOST));
 		httpConnectionManagerParams.setMaxTotalConnections(
-			new Integer(_MAX_TOTAL_CONNECTIONS));
+			Integer.valueOf(_MAX_TOTAL_CONNECTIONS));
 		httpConnectionManagerParams.setSoTimeout(_TIMEOUT);
 
 		_httpClient.setHttpConnectionManager(httpConnectionManager);
 		_proxyHttpClient.setHttpConnectionManager(httpConnectionManager);
 
 		if (!hasProxyConfig() || Validator.isNull(_PROXY_USERNAME)) {
+			_proxyCredentials = null;
+
 			return;
 		}
 
-		List<String> authPrefs = new ArrayList<String>();
+		List<String> authPrefs = new ArrayList<>();
 
 		if (_PROXY_AUTH_TYPE.equals("username-password")) {
 			_proxyCredentials = new UsernamePasswordCredentials(
@@ -167,6 +180,9 @@ public class HttpImpl implements Http {
 			authPrefs.add(AuthPolicy.NTLM);
 			authPrefs.add(AuthPolicy.BASIC);
 			authPrefs.add(AuthPolicy.DIGEST);
+		}
+		else {
+			_proxyCredentials = null;
 		}
 
 		HttpClientParams httpClientParams = _proxyHttpClient.getParams();
@@ -212,7 +228,7 @@ public class HttpImpl implements Http {
 
 		String anchor = urlArray[1];
 
-		StringBundler sb = new StringBundler(7);
+		StringBundler sb = new StringBundler(6);
 
 		sb.append(url);
 
@@ -230,12 +246,22 @@ public class HttpImpl implements Http {
 		sb.append(encodeURL(value));
 		sb.append(anchor);
 
-		return sb.toString();
+		String result = sb.toString();
+
+		if (result.length() > URL_MAXIMUM_LENGTH) {
+			result = shortenURL(result, 2);
+		}
+
+		return result;
 	}
 
 	@Override
 	public String decodePath(String path) {
-		path = StringUtil.replace(path, StringPool.SLASH, _TEMP_SLASH);
+		if (Validator.isNull(path)) {
+			return path;
+		}
+
+		path = StringUtil.replace(path, CharPool.SLASH, _TEMP_SLASH);
 		path = decodeURL(path, true);
 		path = StringUtil.replace(path, _TEMP_SLASH, StringPool.SLASH);
 
@@ -244,12 +270,27 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String decodeURL(String url) {
-		return decodeURL(url, false);
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
+		try {
+			return URLCodec.decodeURL(url, StringPool.UTF8);
+		}
+		catch (IllegalArgumentException iae) {
+			_log.error(iae.getMessage());
+		}
+
+		return StringPool.BLANK;
 	}
 
+	/**
+	 * @deprecated As of 7.0.0, replaced by {@link #decodeURL(String)}
+	 */
+	@Deprecated
 	@Override
 	public String decodeURL(String url, boolean unescapeSpaces) {
-		return URLCodec.decodeURL(url, StringPool.UTF8, unescapeSpaces);
+		return decodeURL(url);
 	}
 
 	public void destroy() {
@@ -258,6 +299,10 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String encodeParameters(String url) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
 		String queryString = getQueryString(url);
 
 		if (Validator.isNull(queryString)) {
@@ -272,7 +317,11 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String encodePath(String path) {
-		path = StringUtil.replace(path, StringPool.SLASH, _TEMP_SLASH);
+		if (Validator.isNull(path)) {
+			return path;
+		}
+
+		path = StringUtil.replace(path, CharPool.SLASH, _TEMP_SLASH);
 		path = encodeURL(path, true);
 		path = StringUtil.replace(path, _TEMP_SLASH, StringPool.SLASH);
 
@@ -286,6 +335,10 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String encodeURL(String url, boolean escapeSpaces) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
 		return URLCodec.encodeURL(url, StringPool.UTF8, escapeSpaces);
 	}
 
@@ -315,7 +368,7 @@ public class HttpImpl implements Http {
 		}
 
 		if (trailing) {
-			for (int i = path.length() - 1; i >=0; i--) {
+			for (int i = path.length() - 1; i >= 0; i--) {
 				if (path.charAt(i) == CharPool.SLASH) {
 					trailingSlashCount++;
 				}
@@ -343,9 +396,8 @@ public class HttpImpl implements Http {
 		if (isProxyHost(hostConfiguration.getHost())) {
 			return _proxyHttpClient;
 		}
-		else {
-			return _httpClient;
-		}
+
+		return _httpClient;
 	}
 
 	@Override
@@ -399,6 +451,10 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String getDomain(String url) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
 		url = removeProtocol(url);
 
 		int pos = url.indexOf(CharPool.SLASH);
@@ -406,17 +462,8 @@ public class HttpImpl implements Http {
 		if (pos != -1) {
 			return url.substring(0, pos);
 		}
-		else {
-			return url;
-		}
-	}
 
-	/**
-	 * @deprecated As of 6.1.0, replaced by {@link
-	 *             #getHostConfiguration(String)}
-	 */
-	public HostConfiguration getHostConfig(String location) throws IOException {
-		return getHostConfiguration(location);
+		return url;
 	}
 
 	public HostConfiguration getHostConfiguration(String location)
@@ -475,6 +522,10 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String getIpAddress(String url) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
 		try {
 			URL urlObj = new URL(url);
 
@@ -535,7 +586,7 @@ public class HttpImpl implements Http {
 
 		if (url.startsWith(Http.HTTP)) {
 			int pos = url.indexOf(
-				StringPool.SLASH, Http.HTTPS_WITH_SLASH.length());
+				CharPool.SLASH, Http.HTTPS_WITH_SLASH.length());
 
 			url = url.substring(pos);
 		}
@@ -545,9 +596,8 @@ public class HttpImpl implements Http {
 		if (pos == -1) {
 			return url;
 		}
-		else {
-			return url.substring(0, pos);
-		}
+
+		return url.substring(0, pos);
 	}
 
 	@Override
@@ -560,9 +610,8 @@ public class HttpImpl implements Http {
 		if (!secure) {
 			return Http.HTTP;
 		}
-		else {
-			return Http.HTTPS;
-		}
+
+		return Http.HTTPS;
 	}
 
 	@Override
@@ -577,14 +626,17 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String getProtocol(String url) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
 		int pos = url.indexOf(Http.PROTOCOL_DELIMITER);
 
 		if (pos != -1) {
 			return url.substring(0, pos);
 		}
-		else {
-			return Http.HTTP;
-		}
+
+		return Http.HTTP;
 	}
 
 	@Override
@@ -598,31 +650,37 @@ public class HttpImpl implements Http {
 		if (pos == -1) {
 			return StringPool.BLANK;
 		}
-		else {
-			return url.substring(pos + 1);
-		}
+
+		return url.substring(pos + 1);
 	}
 
 	@Override
 	public String getRequestURL(HttpServletRequest request) {
-		return request.getRequestURL().toString();
+		return String.valueOf(request.getRequestURL());
 	}
 
 	@Override
 	public boolean hasDomain(String url) {
+		if (Validator.isNull(url)) {
+			return false;
+		}
+
 		return Validator.isNotNull(getDomain(url));
 	}
 
 	@Override
 	public boolean hasProtocol(String url) {
+		if (Validator.isNull(url)) {
+			return false;
+		}
+
 		int pos = url.indexOf(Http.PROTOCOL_DELIMITER);
 
 		if (pos != -1) {
 			return true;
 		}
-		else {
-			return false;
-		}
+
+		return false;
 	}
 
 	@Override
@@ -630,13 +688,16 @@ public class HttpImpl implements Http {
 		if (Validator.isNotNull(_PROXY_HOST) && (_PROXY_PORT > 0)) {
 			return true;
 		}
-		else {
-			return false;
-		}
+
+		return false;
 	}
 
 	@Override
 	public boolean isNonProxyHost(String host) {
+		if (Validator.isNull(host)) {
+			return false;
+		}
+
 		if (_nonProxyHostsPattern != null) {
 			Matcher matcher = _nonProxyHostsPattern.matcher(host);
 
@@ -650,25 +711,98 @@ public class HttpImpl implements Http {
 
 	@Override
 	public boolean isProxyHost(String host) {
+		if (Validator.isNull(host)) {
+			return false;
+		}
+
 		if (hasProxyConfig() && !isNonProxyHost(host)) {
 			return true;
 		}
-		else {
-			return false;
+
+		return false;
+	}
+
+	@Override
+	public boolean isSecure(String url) {
+		String protocol = getProtocol(url);
+
+		return StringUtil.equalsIgnoreCase(protocol, Http.HTTPS);
+	}
+
+	@Override
+	public String normalizePath(String uri) {
+		if (Validator.isNull(uri)) {
+			return uri;
 		}
+
+		uri = removePathParameters(uri);
+
+		String path = null;
+		String queryString = null;
+
+		int pos = uri.indexOf('?');
+
+		if (pos != -1) {
+			path = uri.substring(0, pos);
+			queryString = uri.substring(pos + 1);
+		}
+		else {
+			path = uri;
+		}
+
+		String[] uriParts = StringUtil.split(path.substring(1), CharPool.SLASH);
+
+		List<String> parts = new ArrayList<>(uriParts.length);
+
+		String prevUriPart = null;
+
+		for (String uriPart : uriParts) {
+			String curUriPart = URLCodec.decodeURL(uriPart);
+
+			if (curUriPart.equals(StringPool.DOUBLE_PERIOD)) {
+				if ((prevUriPart != null) &&
+					!prevUriPart.equals(StringPool.PERIOD)) {
+
+					parts.remove(parts.size() - 1);
+				}
+			}
+			else if ((curUriPart.length() > 0) &&
+					 !curUriPart.equals(StringPool.PERIOD)) {
+
+				parts.add(URLCodec.encodeURL(curUriPart));
+			}
+
+			prevUriPart = curUriPart;
+		}
+
+		if (parts.isEmpty()) {
+			return StringPool.SLASH;
+		}
+
+		StringBundler sb = new StringBundler(parts.size() * 2 + 2);
+
+		for (String part : parts) {
+			sb.append(StringPool.SLASH);
+			sb.append(part);
+		}
+
+		if (Validator.isNotNull(queryString)) {
+			sb.append(StringPool.QUESTION);
+			sb.append(queryString);
+		}
+
+		return sb.toString();
 	}
 
 	@Override
 	public Map<String, String[]> parameterMapFromString(String queryString) {
-		Map<String, String[]> parameterMap =
-			new LinkedHashMap<String, String[]>();
+		Map<String, String[]> parameterMap = new LinkedHashMap<>();
 
 		if (Validator.isNull(queryString)) {
 			return parameterMap;
 		}
 
-		Map<String, List<String>> tempParameterMap =
-			new LinkedHashMap<String, List<String>>();
+		Map<String, List<String>> tempParameterMap = new LinkedHashMap<>();
 
 		String[] parameters = StringUtil.split(queryString, CharPool.AMPERSAND);
 
@@ -676,18 +810,34 @@ public class HttpImpl implements Http {
 			if (parameter.length() > 0) {
 				String[] kvp = StringUtil.split(parameter, CharPool.EQUAL);
 
+				if (kvp.length == 0) {
+					continue;
+				}
+
 				String key = kvp[0];
 
 				String value = StringPool.BLANK;
 
 				if (kvp.length > 1) {
-					value = decodeURL(kvp[1]);
+					try {
+						value = decodeURL(kvp[1]);
+					}
+					catch (IllegalArgumentException iae) {
+						if (_log.isInfoEnabled()) {
+							_log.info(
+								"Skipping parameter with key " + key +
+									" because of invalid value " + kvp[1],
+								iae);
+						}
+
+						continue;
+					}
 				}
 
 				List<String> values = tempParameterMap.get(key);
 
 				if (values == null) {
-					values = new ArrayList<String>();
+					values = new ArrayList<>();
 
 					tempParameterMap.put(key, values);
 				}
@@ -753,25 +903,41 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String protocolize(String url, boolean secure) {
-		if (secure) {
-			if (url.startsWith(Http.HTTP_WITH_SLASH)) {
-				return StringUtil.replace(
-					url, Http.HTTP_WITH_SLASH, Http.HTTPS_WITH_SLASH);
-			}
-		}
-		else {
-			if (url.startsWith(Http.HTTPS_WITH_SLASH)) {
-				return StringUtil.replace(
-					url, Http.HTTPS_WITH_SLASH, Http.HTTP_WITH_SLASH);
-			}
-		}
-
-		return url;
+		return protocolize(url, -1, secure);
 	}
 
 	@Override
 	public String protocolize(String url, HttpServletRequest request) {
 		return protocolize(url, request.isSecure());
+	}
+
+	@Override
+	public String protocolize(String url, int port, boolean secure) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
+		try {
+			URL urlObj = new URL(url);
+
+			String protocol = Http.HTTP;
+
+			if (secure) {
+				protocol = Http.HTTPS;
+			}
+
+			if (port == -1) {
+				port = urlObj.getPort();
+			}
+
+			urlObj = new URL(
+				protocol, urlObj.getHost(), port, urlObj.getFile());
+
+			return urlObj.toString();
+		}
+		catch (Exception e) {
+			return url;
+		}
 	}
 
 	@Override
@@ -795,6 +961,10 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String removeDomain(String url) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
 		url = removeProtocol(url);
 
 		int pos = url.indexOf(CharPool.SLASH);
@@ -802,13 +972,16 @@ public class HttpImpl implements Http {
 		if (pos > 0) {
 			return url.substring(pos);
 		}
-		else {
-			return url;
-		}
+
+		return url;
 	}
 
 	@Override
 	public String removeParameter(String url, String name) {
+		if (Validator.isNull(url) || Validator.isNull(name)) {
+			return url;
+		}
+
 		int pos = url.indexOf(CharPool.QUESTION);
 
 		if (pos == -1) {
@@ -865,7 +1038,50 @@ public class HttpImpl implements Http {
 	}
 
 	@Override
+	public String removePathParameters(String uri) {
+		if (Validator.isNull(uri)) {
+			return uri;
+		}
+
+		int pos = uri.indexOf(CharPool.SEMICOLON);
+
+		if (pos == -1) {
+			return uri;
+		}
+
+		String[] uriParts = StringUtil.split(uri.substring(1), CharPool.SLASH);
+
+		StringBundler sb = new StringBundler(uriParts.length * 2);
+
+		for (String uriPart : uriParts) {
+			pos = uriPart.indexOf(CharPool.SEMICOLON);
+
+			if (pos == -1) {
+				sb.append(StringPool.SLASH);
+				sb.append(uriPart);
+			}
+			else if (pos == 0) {
+				continue;
+			}
+			else {
+				sb.append(StringPool.SLASH);
+				sb.append(uriPart.substring(0, pos));
+			}
+		}
+
+		if (sb.length() == 0) {
+			return StringPool.SLASH;
+		}
+
+		return sb.toString();
+	}
+
+	@Override
 	public String removeProtocol(String url) {
+		if (Validator.isNull(url)) {
+			return url;
+		}
+
 		if (url.startsWith(Http.HTTP_WITH_SLASH)) {
 			return url.substring(Http.HTTP_WITH_SLASH.length());
 		}
@@ -875,6 +1091,33 @@ public class HttpImpl implements Http {
 		else {
 			return url;
 		}
+	}
+
+	@Override
+	public String sanitizeHeader(String header) {
+		if (header == null) {
+			return null;
+		}
+
+		StringBuilder sb = null;
+
+		for (int i = 0; i < header.length(); i++) {
+			char c = header.charAt(i);
+
+			if (((c <= 31) && (c != 9)) || (c == 127) || (c > 255)) {
+				if (sb == null) {
+					sb = new StringBuilder(header);
+				}
+
+				sb.setCharAt(i, CharPool.SPACE);
+			}
+		}
+
+		if (sb != null) {
+			header = sb.toString();
+		}
+
+		return header;
 	}
 
 	@Override
@@ -904,13 +1147,74 @@ public class HttpImpl implements Http {
 
 	@Override
 	public String setParameter(String url, String name, String value) {
-		if (url == null) {
-			return null;
+		if (Validator.isNull(url) || Validator.isNull(name)) {
+			return url;
 		}
 
 		url = removeParameter(url, name);
 
 		return addParameter(url, name, value);
+	}
+
+	@Override
+	public String shortenURL(String url, int count) {
+		if (count == 0) {
+			return null;
+		}
+
+		StringBundler sb = new StringBundler();
+
+		String[] params = StringUtil.split(url, CharPool.AMPERSAND);
+
+		for (int i = 0; i < params.length; i++) {
+			String param = params[i];
+
+			if (param.contains("_backURL=") || param.contains("_redirect=") ||
+				param.contains("_returnToFullPageURL=") ||
+				param.startsWith("redirect")) {
+
+				int pos = param.indexOf(CharPool.EQUAL);
+
+				String qName = param.substring(0, pos);
+
+				String redirect = param.substring(pos + 1);
+
+				try {
+					redirect = decodeURL(redirect);
+				}
+				catch (IllegalArgumentException iae) {
+					if (_log.isDebugEnabled()) {
+						_log.debug(
+							"Skipping undecodable parameter " + param, iae);
+					}
+
+					continue;
+				}
+
+				String newURL = shortenURL(redirect, count - 1);
+
+				if (newURL != null) {
+					newURL = encodeURL(newURL);
+
+					sb.append(qName);
+					sb.append(StringPool.EQUAL);
+					sb.append(newURL);
+
+					if (i < (params.length - 1)) {
+						sb.append(StringPool.AMPERSAND);
+					}
+				}
+			}
+			else {
+				sb.append(param);
+
+				if (i < (params.length - 1)) {
+					sb.append(StringPool.AMPERSAND);
+				}
+			}
+		}
+
+		return sb.toString();
 	}
 
 	@Override
@@ -941,6 +1245,38 @@ public class HttpImpl implements Http {
 		options.setPost(post);
 
 		return URLtoByteArray(options);
+	}
+
+	@Override
+	public InputStream URLtoInputStream(Http.Options options)
+		throws IOException {
+
+		return URLtoInputStream(
+			options.getLocation(), options.getMethod(), options.getHeaders(),
+			options.getCookies(), options.getAuth(), options.getBody(),
+			options.getFileParts(), options.getParts(), options.getResponse(),
+			options.isFollowRedirects());
+	}
+
+	@Override
+	public InputStream URLtoInputStream(String location) throws IOException {
+		Http.Options options = new Http.Options();
+
+		options.setLocation(location);
+
+		return URLtoInputStream(options);
+	}
+
+	@Override
+	public InputStream URLtoInputStream(String location, boolean post)
+		throws IOException {
+
+		Http.Options options = new Http.Options();
+
+		options.setLocation(location);
+		options.setPost(post);
+
+		return URLtoInputStream(options);
 	}
 
 	@Override
@@ -979,7 +1315,7 @@ public class HttpImpl implements Http {
 			return null;
 		}
 
-		String protocol = url.getProtocol().toLowerCase();
+		String protocol = StringUtil.toLowerCase(url.getProtocol());
 
 		if (protocol.startsWith(Http.HTTP) || protocol.startsWith(Http.HTTPS)) {
 			return URLtoString(url.toString());
@@ -987,26 +1323,30 @@ public class HttpImpl implements Http {
 
 		URLConnection urlConnection = url.openConnection();
 
-		InputStream inputStream = urlConnection.getInputStream();
+		if (urlConnection == null) {
+			if (_log.isDebugEnabled()) {
+				_log.debug("Unable to open a connection to " + url);
+			}
 
-		UnsyncByteArrayOutputStream unsyncByteArrayOutputStream =
-			new UnsyncByteArrayOutputStream();
-
-		byte[] bytes = new byte[512];
-
-		for (int i = inputStream.read(bytes, 0, 512); i != -1;
-				i = inputStream.read(bytes, 0, 512)) {
-
-			unsyncByteArrayOutputStream.write(bytes, 0, i);
+			return null;
 		}
 
-		xml = new String(
-			unsyncByteArrayOutputStream.unsafeGetByteArray(), 0,
-			unsyncByteArrayOutputStream.size());
+		try (InputStream inputStream = urlConnection.getInputStream();
+			UnsyncByteArrayOutputStream unsyncByteArrayOutputStream =
+				new UnsyncByteArrayOutputStream()) {
 
-		inputStream.close();
+			byte[] bytes = new byte[512];
 
-		unsyncByteArrayOutputStream.close();
+			for (int i = inputStream.read(bytes, 0, 512); i != -1;
+				i = inputStream.read(bytes, 0, 512)) {
+
+				unsyncByteArrayOutputStream.write(bytes, 0, i);
+			}
+
+			xml = new String(
+				unsyncByteArrayOutputStream.unsafeGetByteArray(), 0,
+				unsyncByteArrayOutputStream.size());
+		}
 
 		return xml;
 	}
@@ -1017,9 +1357,8 @@ public class HttpImpl implements Http {
 		if (headers.length == 0) {
 			return false;
 		}
-		else {
-			return true;
-		}
+
+		return true;
 	}
 
 	protected void processPostMethod(
@@ -1038,7 +1377,7 @@ public class HttpImpl implements Http {
 			}
 		}
 		else {
-			List<Part> partsList = new ArrayList<Part>();
+			List<Part> partsList = new ArrayList<>();
 
 			if (parts != null) {
 				for (Map.Entry<String, String> entry : parts.entrySet()) {
@@ -1112,10 +1451,12 @@ public class HttpImpl implements Http {
 		Cookie cookie = new Cookie(
 			commonsCookie.getName(), commonsCookie.getValue());
 
-		String domain = commonsCookie.getDomain();
+		if (!PropsValues.SESSION_COOKIE_USE_FULL_HOSTNAME) {
+			String domain = commonsCookie.getDomain();
 
-		if (Validator.isNotNull(domain)) {
-			cookie.setDomain(domain);
+			if (Validator.isNotNull(domain)) {
+				cookie.setDomain(domain);
+			}
 		}
 
 		Date expiryDate = commonsCookie.getExpiryDate();
@@ -1166,7 +1507,43 @@ public class HttpImpl implements Http {
 			Http.Response response, boolean followRedirects)
 		throws IOException {
 
-		byte[] bytes = null;
+		InputStream inputStream = URLtoInputStream(
+			location, method, headers, cookies, auth, body, fileParts, parts,
+			response, followRedirects);
+
+		if (inputStream == null) {
+			return null;
+		}
+
+		try {
+			long contentLengthLong = response.getContentLengthLong();
+
+			if (contentLengthLong > _MAX_BYTE_ARRAY_LENGTH) {
+				StringBundler sb = new StringBundler(5);
+
+				sb.append("Retrieving ");
+				sb.append(location);
+				sb.append(" yields a file of size ");
+				sb.append(contentLengthLong);
+				sb.append(
+					" bytes that is too large to convert to a byte array");
+
+				throw new OutOfMemoryError(sb.toString());
+			}
+
+			return FileUtil.getBytes(inputStream);
+		}
+		finally {
+			inputStream.close();
+		}
+	}
+
+	protected InputStream URLtoInputStream(
+			String location, Http.Method method, Map<String, String> headers,
+			Cookie[] cookies, Http.Auth auth, Http.Body body,
+			List<Http.FilePart> fileParts, Map<String, String> parts,
+			Http.Response response, boolean followRedirects)
+		throws IOException {
 
 		HttpMethod httpMethod = null;
 		HttpState httpState = null;
@@ -1214,10 +1591,12 @@ public class HttpImpl implements Http {
 					if (!hasRequestHeader(
 							postMethod, HttpHeaders.CONTENT_TYPE)) {
 
-						postMethod.addRequestHeader(
-							HttpHeaders.CONTENT_TYPE,
-							ContentTypes.
-								APPLICATION_X_WWW_FORM_URLENCODED_UTF8);
+						HttpClientParams httpClientParams =
+							httpClient.getParams();
+
+						httpClientParams.setParameter(
+							HttpMethodParams.HTTP_CONTENT_CHARSET,
+							StringPool.UTF8);
 					}
 
 					processPostMethod(postMethod, fileParts, parts);
@@ -1244,9 +1623,9 @@ public class HttpImpl implements Http {
 				 method.equals(Http.Method.PUT)) &&
 				((body != null) ||
 				 ((fileParts != null) && !fileParts.isEmpty()) ||
-				 ((parts != null) && !parts.isEmpty()))) {
-			}
-			else if (!hasRequestHeader(httpMethod, HttpHeaders.CONTENT_TYPE)) {
+				 ((parts != null) && !parts.isEmpty())) &&
+				!hasRequestHeader(httpMethod, HttpHeaders.CONTENT_TYPE)) {
+
 				httpMethod.addRequestHeader(
 					HttpHeaders.CONTENT_TYPE,
 					ContentTypes.APPLICATION_X_WWW_FORM_URLENCODED_UTF8);
@@ -1259,7 +1638,7 @@ public class HttpImpl implements Http {
 
 			httpState = new HttpState();
 
-			if ((cookies != null) && (cookies.length > 0)) {
+			if (ArrayUtil.isNotEmpty(cookies)) {
 				org.apache.commons.httpclient.Cookie[] commonsCookies =
 					toCommonsCookies(cookies);
 
@@ -1283,7 +1662,10 @@ public class HttpImpl implements Http {
 
 			proxifyState(httpState, hostConfiguration);
 
-			httpClient.executeMethod(hostConfiguration, httpMethod, httpState);
+			int responseCode = httpClient.executeMethod(
+				hostConfiguration, httpMethod, httpState);
+
+			response.setResponseCode(responseCode);
 
 			Header locationHeader = httpMethod.getResponseHeader("location");
 
@@ -1291,7 +1673,7 @@ public class HttpImpl implements Http {
 				String redirect = locationHeader.getValue();
 
 				if (followRedirects) {
-					return URLtoByteArray(
+					return URLtoInputStream(
 						redirect, Http.Method.GET, headers, cookies, auth, body,
 						fileParts, parts, response, followRedirects);
 				}
@@ -1300,32 +1682,66 @@ public class HttpImpl implements Http {
 				}
 			}
 
-			InputStream inputStream = httpMethod.getResponseBodyAsStream();
+			long contentLengthLong = 0;
 
-			if (inputStream != null) {
-				Header contentLength = httpMethod.getResponseHeader(
-					HttpHeaders.CONTENT_LENGTH);
+			Header contentLengthHeader = httpMethod.getResponseHeader(
+				HttpHeaders.CONTENT_LENGTH);
 
-				if (contentLength != null) {
-					response.setContentLength(
-						GetterUtil.getInteger(contentLength.getValue()));
+			if (contentLengthHeader != null) {
+				contentLengthLong = GetterUtil.getLong(
+					contentLengthHeader.getValue());
+
+				response.setContentLengthLong(contentLengthLong);
+
+				if (contentLengthLong > _MAX_BYTE_ARRAY_LENGTH) {
+					response.setContentLength(-1);
 				}
+				else {
+					int contentLength = (int)contentLengthLong;
 
-				Header contentType = httpMethod.getResponseHeader(
-					HttpHeaders.CONTENT_TYPE);
-
-				if (contentType != null) {
-					response.setContentType(contentType.getValue());
+					response.setContentLength(contentLength);
 				}
+			}
 
-				bytes = FileUtil.getBytes(inputStream);
+			Header contentType = httpMethod.getResponseHeader(
+				HttpHeaders.CONTENT_TYPE);
+
+			if (contentType != null) {
+				response.setContentType(contentType.getValue());
 			}
 
 			for (Header header : httpMethod.getResponseHeaders()) {
 				response.addHeader(header.getName(), header.getValue());
 			}
 
-			return bytes;
+			InputStream inputStream = httpMethod.getResponseBodyAsStream();
+
+			final HttpMethod referenceHttpMethod = httpMethod;
+
+			final Reference<InputStream> reference = FinalizeManager.register(
+				inputStream,
+				new FinalizeAction() {
+
+					@Override
+					public void doFinalize(Reference<?> reference) {
+						referenceHttpMethod.releaseConnection();
+					}
+
+				},
+				FinalizeManager.WEAK_REFERENCE_FACTORY);
+
+			return new UnsyncFilterInputStream(inputStream) {
+
+				@Override
+				public void close() throws IOException {
+					super.close();
+
+					referenceHttpMethod.releaseConnection();
+
+					reference.clear();
+				}
+
+			};
 		}
 		finally {
 			try {
@@ -1336,20 +1752,13 @@ public class HttpImpl implements Http {
 			catch (Exception e) {
 				_log.error(e, e);
 			}
-
-			try {
-				if (httpMethod != null) {
-					httpMethod.releaseConnection();
-				}
-			}
-			catch (Exception e) {
-				_log.error(e, e);
-			}
 		}
 	}
 
 	private static final String _DEFAULT_USER_AGENT =
 		"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1)";
+
+	private static final int _MAX_BYTE_ARRAY_LENGTH = Integer.MAX_VALUE - 8;
 
 	private static final int _MAX_CONNECTIONS_PER_HOST = GetterUtil.getInteger(
 		PropsUtil.get(HttpImpl.class.getName() + ".max.connections.per.host"),
@@ -1387,16 +1796,16 @@ public class HttpImpl implements Http {
 	private static final int _TIMEOUT = GetterUtil.getInteger(
 		PropsUtil.get(HttpImpl.class.getName() + ".timeout"), 5000);
 
-	private static Log _log = LogFactoryUtil.getLog(HttpImpl.class);
+	private static final Log _log = LogFactoryUtil.getLog(HttpImpl.class);
 
-	private static ThreadLocal<Cookie[]> _cookies = new ThreadLocal<Cookie[]>();
+	private static final ThreadLocal<Cookie[]> _cookies = new ThreadLocal<>();
 
-	private HttpClient _httpClient = new HttpClient();
-	private Pattern _nonProxyHostsPattern;
-	private Credentials _proxyCredentials;
-	private HttpClient _proxyHttpClient = new HttpClient();
+	private final HttpClient _httpClient = new HttpClient();
+	private final Pattern _nonProxyHostsPattern;
+	private final Credentials _proxyCredentials;
+	private final HttpClient _proxyHttpClient = new HttpClient();
 
-	private class FastProtocolSocketFactory
+	private static class FastProtocolSocketFactory
 		extends DefaultProtocolSocketFactory {
 
 		@Override
