@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -17,38 +17,38 @@ package com.liferay.portlet;
 import com.liferay.portal.kernel.language.LanguageUtil;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.model.Layout;
+import com.liferay.portal.kernel.model.PortletConstants;
+import com.liferay.portal.kernel.portlet.InvokerFilterContainer;
+import com.liferay.portal.kernel.portlet.InvokerPortlet;
 import com.liferay.portal.kernel.portlet.LiferayPortletConfig;
 import com.liferay.portal.kernel.portlet.LiferayPortletContext;
 import com.liferay.portal.kernel.portlet.LiferayPortletRequest;
 import com.liferay.portal.kernel.portlet.LiferayPortletResponse;
 import com.liferay.portal.kernel.portlet.PortletFilterUtil;
+import com.liferay.portal.kernel.service.PortletLocalServiceUtil;
 import com.liferay.portal.kernel.servlet.BufferCacheServletResponse;
 import com.liferay.portal.kernel.servlet.PluginContextListener;
 import com.liferay.portal.kernel.servlet.PortletServlet;
+import com.liferay.portal.kernel.util.ClassLoaderUtil;
 import com.liferay.portal.kernel.util.ClassUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.JavaConstants;
+import com.liferay.portal.kernel.util.MapUtil;
+import com.liferay.portal.kernel.util.ReflectionUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Time;
-import com.liferay.portal.model.Layout;
-import com.liferay.portal.model.PortletApp;
-import com.liferay.portal.model.PortletConstants;
-import com.liferay.portal.model.impl.PortletFilterImpl;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.tools.deploy.PortletDeployer;
-import com.liferay.portal.util.ClassLoaderUtil;
-import com.liferay.portal.util.PropsValues;
-import com.liferay.portal.util.WebKeys;
 
+import java.io.Closeable;
 import java.io.IOException;
 import java.io.PrintWriter;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
 import javax.portlet.ActionRequest;
@@ -60,11 +60,13 @@ import javax.portlet.PortletConfig;
 import javax.portlet.PortletContext;
 import javax.portlet.PortletException;
 import javax.portlet.PortletRequest;
+import javax.portlet.PortletResponse;
 import javax.portlet.PortletSession;
 import javax.portlet.RenderRequest;
 import javax.portlet.RenderResponse;
 import javax.portlet.ResourceRequest;
 import javax.portlet.ResourceResponse;
+import javax.portlet.UnavailableException;
 import javax.portlet.filter.ActionFilter;
 import javax.portlet.filter.EventFilter;
 import javax.portlet.filter.FilterChain;
@@ -86,7 +88,8 @@ import org.apache.commons.lang.time.StopWatch;
  * @author Brian Myunghun Kim
  * @author Raymond Augé
  */
-public class InvokerPortletImpl implements InvokerPortlet {
+public class InvokerPortletImpl
+	implements InvokerFilterContainer, InvokerPortlet {
 
 	public static void clearResponse(
 		HttpSession session, long plid, String portletId, String languageId) {
@@ -126,7 +129,7 @@ public class InvokerPortletImpl implements InvokerPortlet {
 				WebKeys.CACHE_PORTLET_RESPONSES);
 
 		if (responses == null) {
-			responses = new ConcurrentHashMap<String, InvokerPortletResponse>();
+			responses = new ConcurrentHashMap<>();
 
 			session.setAttribute(WebKeys.CACHE_PORTLET_RESPONSES, responses);
 		}
@@ -142,21 +145,22 @@ public class InvokerPortletImpl implements InvokerPortlet {
 	}
 
 	public InvokerPortletImpl(
-			com.liferay.portal.model.Portlet portletModel, Portlet portlet,
-			PortletConfig portletConfig, PortletContext portletContext,
-			boolean checkAuthToken, boolean facesPortlet, boolean strutsPortlet,
-			boolean strutsBridgePortlet)
-		throws PortletException {
+		com.liferay.portal.kernel.model.Portlet portletModel, Portlet portlet,
+		PortletConfig portletConfig, PortletContext portletContext,
+		InvokerFilterContainer invokerFilterContainer, boolean checkAuthToken,
+		boolean facesPortlet, boolean strutsPortlet,
+		boolean strutsBridgePortlet) {
 
 		_initialize(
 			portletModel, portlet, portletConfig, portletContext,
-			checkAuthToken, facesPortlet, strutsPortlet, strutsBridgePortlet);
+			invokerFilterContainer, checkAuthToken, facesPortlet, strutsPortlet,
+			strutsBridgePortlet);
 	}
 
 	public InvokerPortletImpl(
-			com.liferay.portal.model.Portlet portletModel, Portlet portlet,
-			PortletContext portletContext)
-		throws PortletException {
+		com.liferay.portal.kernel.model.Portlet portletModel, Portlet portlet,
+		PortletContext portletContext,
+		InvokerFilterContainer invokerFilterContainer) {
 
 		Map<String, String> initParams = portletModel.getInitParams();
 
@@ -166,11 +170,7 @@ public class InvokerPortletImpl implements InvokerPortlet {
 		boolean facesPortlet = false;
 
 		if (ClassUtil.isSubclass(
-				portlet.getClass(), PortletDeployer.JSF_MYFACES) ||
-			ClassUtil.isSubclass(
-				portlet.getClass(), PortletDeployer.JSF_STANDARD) ||
-			ClassUtil.isSubclass(
-				portlet.getClass(), PortletDeployer.JSF_SUN)) {
+				portlet.getClass(), PortletDeployer.JSF_STANDARD)) {
 
 			facesPortlet = true;
 		}
@@ -183,8 +183,8 @@ public class InvokerPortletImpl implements InvokerPortlet {
 			"org.apache.portals.bridges.struts.StrutsPortlet");
 
 		_initialize(
-			portletModel, portlet, null, portletContext, checkAuthToken,
-			facesPortlet, strutsPortlet, strutsBridgePortlet);
+			portletModel, portlet, null, portletContext, invokerFilterContainer,
+			checkAuthToken, facesPortlet, strutsPortlet, strutsBridgePortlet);
 	}
 
 	@Override
@@ -200,22 +200,35 @@ public class InvokerPortletImpl implements InvokerPortlet {
 		ClassLoader contextClassLoader =
 			ClassLoaderUtil.getContextClassLoader();
 
-		ClassLoader portletClassLoader = getPortletClassLoader();
-
 		try {
-			if (portletClassLoader != null) {
-				ClassLoaderUtil.setContextClassLoader(portletClassLoader);
+			if (_portletClassLoader != null) {
+				ClassLoaderUtil.setContextClassLoader(_portletClassLoader);
 			}
 
-			removePortletFilters();
+			Closeable closeable = (Closeable)_invokerFilterContainer;
+
+			closeable.close();
 
 			_portlet.destroy();
 		}
+		catch (IOException ioe) {
+			_log.error(ioe, ioe);
+		}
 		finally {
-			if (portletClassLoader != null) {
+			if (_portletClassLoader != null) {
 				ClassLoaderUtil.setContextClassLoader(contextClassLoader);
 			}
 		}
+	}
+
+	@Override
+	public List<ActionFilter> getActionFilters() {
+		return _invokerFilterContainer.getActionFilters();
+	}
+
+	@Override
+	public List<EventFilter> getEventFilters() {
+		return _invokerFilterContainer.getEventFilters();
 	}
 
 	@Override
@@ -257,23 +270,33 @@ public class InvokerPortletImpl implements InvokerPortlet {
 	}
 
 	@Override
+	public List<RenderFilter> getRenderFilters() {
+		return _invokerFilterContainer.getRenderFilters();
+	}
+
+	@Override
+	public List<ResourceFilter> getResourceFilters() {
+		return _invokerFilterContainer.getResourceFilters();
+	}
+
+	@Override
 	public void init(PortletConfig portletConfig) throws PortletException {
 		_liferayPortletConfig = (LiferayPortletConfig)portletConfig;
 
 		ClassLoader contextClassLoader =
 			ClassLoaderUtil.getContextClassLoader();
 
-		ClassLoader portletClassLoader = getPortletClassLoader();
+		_portletClassLoader = getPortletClassLoader();
 
 		try {
-			if (portletClassLoader != null) {
-				ClassLoaderUtil.setContextClassLoader(portletClassLoader);
+			if (_portletClassLoader != null) {
+				ClassLoaderUtil.setContextClassLoader(_portletClassLoader);
 			}
 
 			_portlet.init(portletConfig);
 		}
 		finally {
-			if (portletClassLoader != null) {
+			if (_portletClassLoader != null) {
 				ClassLoaderUtil.setContextClassLoader(contextClassLoader);
 			}
 		}
@@ -301,51 +324,40 @@ public class InvokerPortletImpl implements InvokerPortlet {
 
 	@Override
 	public void processAction(
-			ActionRequest actionRequest, ActionResponse actionResponse)
-		throws IOException {
+		ActionRequest actionRequest, ActionResponse actionResponse) {
 
-		StopWatch stopWatch = null;
+		StopWatch stopWatch = new StopWatch();
 
-		if (_log.isDebugEnabled()) {
-			stopWatch = new StopWatch();
-
-			stopWatch.start();
-		}
+		stopWatch.start();
 
 		try {
 			invokeAction(actionRequest, actionResponse);
 		}
-		catch (PortletException pe) {
-			actionRequest.setAttribute(
-				_portletId + PortletException.class.getName(), pe);
+		catch (Exception e) {
+			processException(e, actionRequest, actionResponse);
 		}
 
 		if (_log.isDebugEnabled()) {
-			if (stopWatch != null) {
-				_log.debug(
-					"processAction for " + _portletId + " takes " +
-						stopWatch.getTime() + " ms");
-			}
-			else {
-				_log.debug("processAction for " + _portletId + " is finished");
-			}
+			_log.debug(
+				"processAction for " + _portletId + " takes " +
+					stopWatch.getTime() + " ms");
 		}
 	}
 
 	@Override
 	public void processEvent(
-			EventRequest eventRequest, EventResponse eventResponse)
-		throws IOException, PortletException {
+		EventRequest eventRequest, EventResponse eventResponse) {
 
-		StopWatch stopWatch = null;
+		StopWatch stopWatch = new StopWatch();
 
-		if (_log.isDebugEnabled()) {
-			stopWatch = new StopWatch();
+		stopWatch.start();
 
-			stopWatch.start();
+		try {
+			invokeEvent(eventRequest, eventResponse);
 		}
-
-		invokeEvent(eventRequest, eventResponse);
+		catch (Exception e) {
+			processException(e, eventRequest, eventResponse);
+		}
 
 		if (_log.isDebugEnabled()) {
 			_log.debug(
@@ -367,13 +379,9 @@ public class InvokerPortletImpl implements InvokerPortlet {
 			throw portletException;
 		}
 
-		StopWatch stopWatch = null;
+		StopWatch stopWatch = new StopWatch();
 
-		if (_log.isDebugEnabled()) {
-			stopWatch = new StopWatch();
-
-			stopWatch.start();
-		}
+		stopWatch.start();
 
 		String remoteUser = renderRequest.getRemoteUser();
 
@@ -436,10 +444,7 @@ public class InvokerPortletImpl implements InvokerPortlet {
 			((RenderResponseImpl)renderResponse).getProperties();
 
 		if (properties.containsKey("clear-request-parameters")) {
-			Map<String, String[]> renderParameters =
-				((RenderRequestImpl)renderRequest).getRenderParameters();
-
-			renderParameters.clear();
+			((RenderRequestImpl)renderRequest).clearRenderParameters();
 		}
 
 		if (_log.isDebugEnabled()) {
@@ -451,23 +456,17 @@ public class InvokerPortletImpl implements InvokerPortlet {
 
 	@Override
 	public void serveResource(
-			ResourceRequest resourceRequest, ResourceResponse resourceResponse)
-		throws IOException {
+		ResourceRequest resourceRequest, ResourceResponse resourceResponse) {
 
-		StopWatch stopWatch = null;
+		StopWatch stopWatch = new StopWatch();
 
-		if (_log.isDebugEnabled()) {
-			stopWatch = new StopWatch();
-
-			stopWatch.start();
-		}
+		stopWatch.start();
 
 		try {
 			invokeResource(resourceRequest, resourceResponse);
 		}
-		catch (PortletException pe) {
-			resourceRequest.setAttribute(
-				_portletId + PortletException.class.getName(), pe);
+		catch (Exception e) {
+			processException(e, resourceRequest, resourceResponse);
 		}
 
 		if (_log.isDebugEnabled()) {
@@ -477,90 +476,12 @@ public class InvokerPortletImpl implements InvokerPortlet {
 		}
 	}
 
+	/**
+	 * @deprecated As of 7.0.0
+	 */
+	@Deprecated
 	@Override
-	public void setPortletFilters() throws PortletException {
-		PortletApp portletApp = _portletModel.getPortletApp();
-
-		PortletContextBag portletContextBag = PortletContextBagPool.get(
-			portletApp.getServletContextName());
-
-		if (portletApp.isWARFile() && (portletContextBag == null)) {
-			return;
-		}
-
-		removePortletFilters();
-
-		Map<String, com.liferay.portal.model.PortletFilter> portletFilters =
-			_portletModel.getPortletFilters();
-
-		for (Map.Entry<String, com.liferay.portal.model.PortletFilter> entry :
-				portletFilters.entrySet()) {
-
-			com.liferay.portal.model.PortletFilter portletFilterModel =
-				entry.getValue();
-
-			PortletFilter portletFilter = PortletFilterFactory.create(
-				portletFilterModel, _liferayPortletContext);
-
-			Set<String> lifecycles = portletFilterModel.getLifecycles();
-
-			if (lifecycles.contains(PortletRequest.ACTION_PHASE)) {
-				_actionFilters.add((ActionFilter)portletFilter);
-			}
-
-			if (lifecycles.contains(PortletRequest.EVENT_PHASE)) {
-				_eventFilters.add((EventFilter)portletFilter);
-			}
-
-			if (lifecycles.contains(PortletRequest.RENDER_PHASE)) {
-				_renderFilters.add((RenderFilter)portletFilter);
-			}
-
-			if (lifecycles.contains(PortletRequest.RESOURCE_PHASE)) {
-				_resourceFilters.add((ResourceFilter)portletFilter);
-			}
-		}
-
-		ClassLoader classLoader = ClassLoaderUtil.getContextClassLoader();
-
-		try {
-			ClassLoaderUtil.setContextClassLoader(
-				ClassLoaderUtil.getPortalClassLoader());
-
-			for (String portletFilterClassName :
-					PropsValues.PORTLET_FILTERS_SYSTEM) {
-
-				com.liferay.portal.model.PortletFilter portletFilterModel =
-					new PortletFilterImpl(
-						portletFilterClassName, portletFilterClassName,
-						Collections.<String>emptySet(),
-						Collections.<String, String>emptyMap(), portletApp);
-
-				PortletFilter portletFilter = PortletFilterFactory.create(
-					portletFilterModel, _liferayPortletContext);
-
-				_systemPortletFilters.add(portletFilter);
-
-				if (portletFilter instanceof ActionFilter) {
-					_actionFilters.add((ActionFilter)portletFilter);
-				}
-
-				if (portletFilter instanceof EventFilter) {
-					_eventFilters.add((EventFilter)portletFilter);
-				}
-
-				if (portletFilter instanceof RenderFilter) {
-					_renderFilters.add((RenderFilter)portletFilter);
-				}
-
-				if (portletFilter instanceof ResourceFilter) {
-					_resourceFilters.add((ResourceFilter)portletFilter);
-				}
-			}
-		}
-		finally {
-			ClassLoaderUtil.setContextClassLoader(classLoader);
-		}
+	public void setPortletFilters() {
 	}
 
 	protected void invoke(
@@ -627,7 +548,7 @@ public class InvokerPortletImpl implements InvokerPortlet {
 
 		Map<String, String[]> properties = portletResponse.getProperties();
 
-		if ((properties != null) && (properties.size() > 0)) {
+		if (MapUtil.isNotEmpty(properties)) {
 			if (_expCache != null) {
 				String[] expCache = properties.get(
 					RenderResponse.EXPIRATION_CACHE);
@@ -635,7 +556,8 @@ public class InvokerPortletImpl implements InvokerPortlet {
 				if ((expCache != null) && (expCache.length > 0) &&
 					(expCache[0] != null)) {
 
-					_expCache = new Integer(GetterUtil.getInteger(expCache[0]));
+					_expCache = Integer.valueOf(
+						GetterUtil.getInteger(expCache[0]));
 				}
 			}
 		}
@@ -652,7 +574,7 @@ public class InvokerPortletImpl implements InvokerPortlet {
 
 		invoke(
 			portletRequest, portletResponse, PortletRequest.ACTION_PHASE,
-			_actionFilters);
+			_invokerFilterContainer.getActionFilters());
 	}
 
 	protected void invokeEvent(
@@ -666,7 +588,7 @@ public class InvokerPortletImpl implements InvokerPortlet {
 
 		invoke(
 			portletRequest, portletResponse, PortletRequest.EVENT_PHASE,
-			_eventFilters);
+			_invokerFilterContainer.getEventFilters());
 	}
 
 	protected String invokeRender(
@@ -678,9 +600,16 @@ public class InvokerPortletImpl implements InvokerPortlet {
 		LiferayPortletResponse portletResponse =
 			(LiferayPortletResponse)renderResponse;
 
-		invoke(
-			portletRequest, portletResponse, PortletRequest.RENDER_PHASE,
-			_renderFilters);
+		try {
+			invoke(
+				portletRequest, portletResponse, PortletRequest.RENDER_PHASE,
+				_invokerFilterContainer.getRenderFilters());
+		}
+		catch (Exception e) {
+			processException(e, renderRequest, renderResponse);
+
+			throw e;
+		}
 
 		RenderResponseImpl renderResponseImpl =
 			(RenderResponseImpl)renderResponse;
@@ -699,40 +628,68 @@ public class InvokerPortletImpl implements InvokerPortlet {
 
 		invoke(
 			portletRequest, portletResponse, PortletRequest.RESOURCE_PHASE,
-			_resourceFilters);
+			_invokerFilterContainer.getResourceFilters());
 	}
 
-	protected void removePortletFilters() {
-		_actionFilters.clear();
-		_eventFilters.clear();
-		_renderFilters.clear();
-		_resourceFilters.clear();
+	protected void processException(
+		Exception e, PortletRequest portletRequest,
+		PortletResponse portletResponse) {
 
-		for (PortletFilter portletFilter : _systemPortletFilters) {
-			portletFilter.destroy();
+		if (portletResponse instanceof StateAwareResponseImpl) {
+
+			// PLT.5.4.7, TCK xxiii and PLT.15.2.6, cxlvi
+
+			StateAwareResponseImpl stateAwareResponseImpl =
+				(StateAwareResponseImpl)portletResponse;
+
+			stateAwareResponseImpl.reset();
 		}
 
-		_systemPortletFilters.clear();
+		if (e instanceof RuntimeException) {
+
+			// PLT.5.4.7, TCK xxv
+
+			e = new PortletException(e);
+		}
+
+		if (e instanceof UnavailableException) {
+
+			// PLT.5.4.7, TCK xxiv
+
+			destroy();
+
+			PortletLocalServiceUtil.deletePortlet(_portletModel);
+		}
+
+		if (e instanceof PortletException) {
+			if (!(portletRequest instanceof RenderRequest)) {
+				portletRequest.setAttribute(
+					_portletId + PortletException.class.getName(), e);
+			}
+		}
+		else {
+			ReflectionUtil.throwException(e);
+		}
 	}
 
 	private void _initialize(
-			com.liferay.portal.model.Portlet portletModel, Portlet portlet,
-			PortletConfig portletConfig, PortletContext portletContext,
-			boolean checkAuthToken, boolean facesPortlet, boolean strutsPortlet,
-			boolean strutsBridgePortlet)
-		throws PortletException {
+		com.liferay.portal.kernel.model.Portlet portletModel, Portlet portlet,
+		PortletConfig portletConfig, PortletContext portletContext,
+		InvokerFilterContainer invokerFilterContainer, boolean checkAuthToken,
+		boolean facesPortlet, boolean strutsPortlet,
+		boolean strutsBridgePortlet) {
 
 		_portletModel = portletModel;
 		_portlet = portlet;
 		_liferayPortletConfig = (LiferayPortletConfig)portletConfig;
 		_portletId = _portletModel.getPortletId();
 		_liferayPortletContext = (LiferayPortletContext)portletContext;
+		_invokerFilterContainer = invokerFilterContainer;
 		_checkAuthToken = checkAuthToken;
 		_facesPortlet = facesPortlet;
 		_strutsPortlet = strutsPortlet;
 		_strutsBridgePortlet = strutsBridgePortlet;
 		_expCache = portletModel.getExpCache();
-		setPortletFilters();
 
 		if (_log.isDebugEnabled()) {
 			_log.debug(
@@ -741,24 +698,20 @@ public class InvokerPortletImpl implements InvokerPortlet {
 		}
 	}
 
-	private static Log _log = LogFactoryUtil.getLog(InvokerPortletImpl.class);
+	private static final Log _log = LogFactoryUtil.getLog(
+		InvokerPortletImpl.class);
 
-	private List<ActionFilter> _actionFilters = new ArrayList<ActionFilter>();
 	private boolean _checkAuthToken;
-	private List<EventFilter> _eventFilters = new ArrayList<EventFilter>();
 	private Integer _expCache;
 	private boolean _facesPortlet;
+	private InvokerFilterContainer _invokerFilterContainer;
 	private LiferayPortletConfig _liferayPortletConfig;
 	private LiferayPortletContext _liferayPortletContext;
 	private Portlet _portlet;
+	private ClassLoader _portletClassLoader;
 	private String _portletId;
-	private com.liferay.portal.model.Portlet _portletModel;
-	private List<RenderFilter> _renderFilters = new ArrayList<RenderFilter>();
-	private List<ResourceFilter> _resourceFilters =
-		new ArrayList<ResourceFilter>();
+	private com.liferay.portal.kernel.model.Portlet _portletModel;
 	private boolean _strutsBridgePortlet;
 	private boolean _strutsPortlet;
-	private List<PortletFilter> _systemPortletFilters =
-		new ArrayList<PortletFilter>();
 
 }
